Gradle: Try to fix unit test failure on Java >= 16
Would fail on GitHub Actions with:
plugins.WebOfTrust.AbstractJUnit4BaseTestSelfTest > testAddRandomIdentitiesIntInt FAILED
    java.lang.reflect.InaccessibleObjectException: Unable to make field private final java.lang.String java.lang.Enum.name accessible: module java.base does not "opens java.lang" to unnamed module @2064d52f
        at java.base/java.lang.reflect.AccessibleObject.checkCanSetAccessible(AccessibleObject.java:357)
        at java.base/java.lang.reflect.AccessibleObject.checkCanSetAccessible(AccessibleObject.java:297)
        at java.base/java.lang.reflect.Field.checkCanSetAccessible(Field.java:177)
        at java.base/java.lang.reflect.Field.setAccessible(Field.java:171)
        at com.db4o.internal.JDK_1_2.setAccessible(JDK_1_2.java:150)

Fix attempt taken from:
https://stackoverflow.com/a/41265267

Based on Freetalk commits:
9e53576f20c117aa3013c32ee04a4df80a3a59bc
f0ea3b2ad864c986dd5ba515af0bac730a3eb473

--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,11 @@ test {
 		exclude '**/TickerDelayedBackgroundJobTest.class'
 	}
 	
+	// FIXME: Workaround attempt for db4o breaking, and thus unit tests failing, with Java >= 16.
+	// If this works then properly document it, if not remove it.
+	// Also figure out a way for how to apply it when running Freetalk in an actual Freenet node.
+	jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+	
 	/* TODO: Performance: As of 2019-04-28 doesn't work on Travis CI yet because the Gradle version
 	/* on Ubuntu Trusty is too old - and we cannot use Ubuntu Xenial because Java 7 doesn't work
 	/* there but it is still the minimal Java version required by Freenet. */
