--- a/build.gradle
+++ b/build.gradle
@@ -91,9 +91,12 @@ test {
 	}
 	
 	// FIXME: Workaround attempt for db4o breaking, and thus unit tests failing, with Java >= 16.
+	// We run this on Java 9 and above, not just 16 and above, to support old Gradle versions which
+	// won't be able to detect Java 16 as such. 9 is the minimum needed to to suport '--add-opens'.
+	// 
 	// If this works then properly document it, if not remove it.
-	// Also figure out a way for how to apply it when running Freetalk in an actual Freenet node.
-	if(JavaVersion.current().getMajorVersion().toInteger() >= 16)
+	// Also figure out a way for how to apply it when running WoT in an actual Freenet node.
+	if(JavaVersion.current().getMajorVersion().toInteger() >= 9)
 		jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
 	
 	/* TODO: Performance: As of 2019-04-28 doesn't work on Travis CI yet because the Gradle version
