--- a/build.gradle
+++ b/build.gradle
@@ -92,7 +92,7 @@ test {
 	
 	// FIXME: Workaround attempt for db4o breaking, and thus unit tests failing, with Java >= 16.
 	// We run this on Java 9 and above, not just 16 and above, to support old Gradle versions which
-	// won't be able to detect Java 16 as such. 9 is the minimum needed to to suport '--add-opens'.
+	// won't be able to detect Java 16 as such. 9 is the minimum needed to support '--add-opens'.
 	// 
 	// If this works then properly document it, if not remove it.
 	// Also figure out a way for how to apply it when running WoT in an actual Freenet node.
