Gradle: Recycle resolved FIXME into documentation
Based on Freetalk commit a2aee99efc00538b232d3fda493734fa8314fc25

--- a/build.gradle
+++ b/build.gradle
@@ -90,11 +90,13 @@ test {
 		exclude '**/TickerDelayedBackgroundJobTest.class'
 	}
 	
-	// FIXME: Workaround attempt for db4o breaking, and thus unit tests failing, with Java >= 16.
+	// Workaround for db4o breaking, and thus unit tests failing, with Java >= 16.
+	// It allows db4o to use reflection to read data out of JRE's core classes.
+	//
 	// We run this on Java 9 and above, not just 16 and above, to support old Gradle versions which
 	// won't be able to detect Java 16 as such. 9 is the minimum needed to support '--add-opens'.
 	// 
-	// If this works then properly document it, if not remove it.
+	// FIXME:
 	// Also figure out a way for how to apply it when running WoT in an actual Freenet node.
 	if(JavaVersion.current().getMajorVersion().toInteger() >= 9)
 		jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
