--- a/build.gradle
+++ b/build.gradle
@@ -91,7 +91,7 @@ test {
 	}
 	
 	// Workaround for db4o breaking, and thus unit tests failing, with Java >= 16:
-	// Java 16 blocks reflection from looking into JRE's core classes. But db4o needs that to
+	// Java 16 disallows using reflection to look into JRE's core classes. But db4o needs that to
 	// fulfill its purpose of being a database which can store Java classes without adding any
 	// code to them. Thus we allow it by a command line option.
 	//
