Ant: Try to fix unit test failure on Java >= 16
See the commits leading up to this one for details.

Adding the command line argument on Java 9 already because:
- that is the earliest version which supports it.
- and in the commits leading up to this one we ran into the issue of
  Gradle only being able to identify Java versions which are older than
  the date upon which the used Gradle version was released, so we
  couldn't use 16 but had to go for 9 there.
  I could imagine that Ant also isn't able to detect Java versions which
  are newer than itself so let's just apply the same workaround for Ant
  as well.

For "<condition>" see:
https://ant.apache.org/manual/Tasks/condition.html

For "<javaversion>" see:
https://ant.apache.org/manual/Tasks/conditions.html

For  "<jvmarg>" see:
https://ant.apache.org/manual/Tasks/junit.html
https://ant.apache.org/manual/using.html#arg

--- a/build.xml
+++ b/build.xml
@@ -94,7 +94,12 @@
 		<fileset file="${hamcrest.location}"/>
 		<fileset file="${cobertura.location}"/>
 	</path>
-
+	
+	<!-- For junit - we need to specify some command line arguments on Java >= 9 -->
+	<condition property="java.atleast9">
+		<javaversion atleast="9"/>
+	</condition>
+	
 	<presetdef name="javac">
 		<!--
 		includeantruntime is a workaround for an ant 1.8 misfeature. TODO: Remove when ant fixes this.
@@ -335,6 +340,7 @@
 			<sysproperty key="net.sourceforge.cobertura.datafile"
 				file="${build-test-coverage}/cobertura.ser" if:true="${test.coverage}"/>
 			<sysproperty key="extensiveTesting" value="${extensiveTesting}" />
+			<jvmarg if:true="${java.atleast9}" line="--add-opens java.base/java.lang=ALL-UNNAMED"/>
 			<jvmarg value="-Djava.awt.headless=true"/>
 			<!-- See IS_UNIT_TEST at class Configuration -->
 			<jvmarg value="-Dis_WOT_unit_test=true"/>
@@ -374,6 +380,7 @@
 			</batchtest>
 			
 			<sysproperty key="extensiveTesting" value="${extensiveTesting}" />
+			<jvmarg if:true="${java.atleast9}" line="--add-opens java.base/java.lang=ALL-UNNAMED"/>
 			<jvmarg value="-Djava.awt.headless=true"/>
 			<!-- See IS_UNIT_TEST at class Configuration -->
 			<jvmarg value="-Dis_WOT_unit_test=true"/>
