GitHub Actions: Exclude Java 17 on Windows, fred compilation fails with it
Based on Freetalk commit b9aa56b986b0e766c830cac28fea61bde9f1e7f8

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -66,9 +66,9 @@ jobs:
         
         exclude:
           - os: windows-latest
-            # TODO: Bug: As of 2021-09-11 fred doesn't compile with Java 16 on Windows due to its
+            # TODO: Bug: As of 2022-05-24 fred doesn't compile with Java >= 16 on Windows due to its
             # Gradle version 4.10.3 not working there. Try again once fred uses a more recent one.
-            java-version: 16
+            java-version: [16, 17]
     runs-on: ${{ matrix.os }}
     name: >-
         ${{matrix.os}}
