--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -64,11 +64,16 @@ jobs:
             fred-branch: next
             upload-jar-to-freenet: false
         
+        # TODO: Bug: As of 2022-05-24 fred doesn't compile with Java >= 16 on Windows due to its
+        # Gradle version 4.10.3 not working there. Try again once fred uses a more recent one.
+        # TODO: Code quality: As of 2022-05-24 GHA does not support arrays such as
+        # "java-version: [16, 17]" here yet, see https://github.com/github/feedback/discussions/7835
+        # Use an array once it's fixed.
         exclude:
           - os: windows-latest
-            # TODO: Bug: As of 2022-05-24 fred doesn't compile with Java >= 16 on Windows due to its
-            # Gradle version 4.10.3 not working there. Try again once fred uses a more recent one.
-            java-version: [16, 17]
+            java-version: 16
+          - os: windows-latest
+            java-version: 17
     runs-on: ${{ matrix.os }}
     name: >-
         ${{matrix.os}}
