--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,8 +24,7 @@ jobs:
         # 
         # 9, 10 excluded because: Building fred fails there, probably because they're EOL.
         # TODO: Trim the set of Java versions to respect GitHub's free service.
-        # FIXME: Add 18.
-        java-version: [8, 11, 12, 13, 14, 15, 16, 17]
+        java-version: [8, 11, 12, 13, 14, 15, 16, 17, 18]
         fred-branch:  [next]
         # Use Gradle instead of Ant as it supports using multiple CPU cores on the unit tests.
         WoT-builder: [gradle]
@@ -54,7 +53,7 @@ jobs:
             os: ubuntu-latest
             WoT-builder: gradle
           
-          - java-version: 17
+          - java-version: 18
             # Still use Ant on one Java version to ensure it keeps working.
             # Don't use it on the above job because deployment happens there which is slow, just
             # like Ant.
@@ -75,6 +74,8 @@ jobs:
             java-version: 16
           - os: windows-latest
             java-version: 17
+          - os: windows-latest
+            java-version: 18
     runs-on: ${{ matrix.os }}
     name: >-
         ${{matrix.os}}
