--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -104,7 +104,7 @@ jobs:
       with:
         # FIXME: Choose a distribution.
         # FIXME: Also test against Oracle's JDK once GHA supports it.
-        distribution: 'adopt'
+        ## distribution: 'adopt' # Java 19 not available yet as of 2022-05-24
         java-version: ${{matrix.java-version}}
     
     - name: Checkout Freenet git repository
