--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -104,7 +104,7 @@ jobs:
       with:
         # FIXME: Choose a distribution.
         # FIXME: Also test against Oracle's JDK once GHA supports it.
-        distribution: 'adopt'
+        distribution: 'temurin'
         java-version: ${{matrix.java-version}}
     
     - name: Checkout Freenet git repository
