GitHub Actions: Replace 'temurin' Java distribution with 'zulu' to fix lack of most Java versions we want to test against
Temurin only provides 8, 11, 16, 17, 18.

Documentation of the supported distributions:
https://github.com/actions/setup-java#supported-distributions

Based on Freetalk commit f4cbf684fa289fd4f0d7e463bdc4be61f5b737d0

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -102,9 +102,10 @@ jobs:
     - name: Install Java
       uses: actions/setup-java@v2
       with:
-        # FIXME: Choose a distribution.
+        # Using 'zulu' distribution because as of 2022-05-24 it is the only one which has early
+        # access builds available of the upcoming Java 19.
         # FIXME: Also test against Oracle's JDK once GHA supports it.
-        distribution: 'temurin'
+        distribution: 'zulu'
         java-version: ${{matrix.java-version}}
     
     - name: Checkout Freenet git repository
