--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,7 +24,7 @@ jobs:
         # 
         # 9, 10 excluded because: Building fred fails there, probably because they're EOL.
         # TODO: Trim the set of Java versions to respect GitHub's free service.
-        java-version: [8, 11, 12, 13, 14, 15, 16, 17, 18, 19]
+        java-version: [8, 11, 12, 13, 14, 15, 16, 17, 18, 19-ea]
         fred-branch:  [next]
         # Use Gradle instead of Ant as it supports using multiple CPU cores on the unit tests.
         WoT-builder: [gradle]
@@ -53,7 +53,7 @@ jobs:
             os: ubuntu-latest
             WoT-builder: gradle
           
-          - java-version: 19
+          - java-version: 19-ea
             # Still use Ant on one Java version to ensure it keeps working.
             # Don't use it on the above job because deployment happens there which is slow, just
             # like Ant.
@@ -77,7 +77,7 @@ jobs:
           - os: windows-latest
             java-version: 18
           - os: windows-latest
-            java-version: 19
+            java-version: 19-ea
     runs-on: ${{ matrix.os }}
     name: >-
         ${{matrix.os}}
