GitHub Actions: Downgrade FIXME to TODO, can't be fixed yet
Based on Freetalk commit 499f11fe4ccab4e85bf77255d11e15ee2e6d375c

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -105,7 +105,8 @@ jobs:
         # Using 'zulu' distribution because as of 2022-05-24 the other distributions either don't
         # provide many old Java versions or lack an early access build of the upcoming version.
         # For some overview of distributions see https://news.ycombinator.com/item?id=28820601
-        # FIXME: Also test against Oracle's JDK once GHA supports it.
+        # TODO: Code quality: Also test against Oracle's JDK once it is available on GHA,
+        # upstream bugtracker issue: https://github.com/actions/setup-java/issues/69
         distribution: 'zulu'
         java-version: ${{matrix.java-version}}
     
