--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,7 +24,11 @@ jobs:
         # 
         # 9, 10 excluded because: Building fred fails there, probably because they're EOL.
         # TODO: Trim the set of Java versions to respect GitHub's free service.
-        java-version: [8, 11, 12, 13, 14, 15, 16, 17, 18, 19-ea]
+        # TODO: Code quality: Test against 19-ea (or 19 once released) as soon as Gradle supports
+        # it. Gradle bugtracker entry: https://github.com/gradle/gradle/issues/20372
+        # Notice: We do already test 19-ea with Ant, and exclude 19-ea on Windows, search for "19"
+        # below.
+        java-version: [8, 11, 12, 13, 14, 15, 16, 17, 18]
         fred-branch:  [next]
         # Use Gradle instead of Ant as it supports using multiple CPU cores on the unit tests.
         WoT-builder: [gradle]
